Trying to fix issues with the missing fonts on mobile

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -104,7 +104,7 @@ html {
 }
 
 body {
-  font-family: var(--font-inter), serif !important;
+  font-family: 'Inter', serif !important;
   font-weight: 400;
   overflow-x: hidden;
   font-size: 1.6rem;
@@ -1361,8 +1361,4 @@ b {
   @media only screen and (max-width: 37.5em) {
     flex-direction: column;
   }
-}
-
-a, span, p, h1, h2, h3, h4, h5, h6, li, button, input {
-  font-family: 'Inter', sans-serif;
 }
